Added paragraph as to why we are using continuous space

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -124,13 +124,13 @@ This model also naturally extends to two- or higher-dimensional spaces.
 These would include more complex and multi-faceted topics, such as migration, which
 would include subtopics such as border restrictions and economic impact, or where to
 delegate fund in the United States Budget.
-However, as previously mentioned, we will only consider the idealistic
-situation where a congress member can choose their proxy for each topic individually.
-The model also allows for votes on topics that are not binary, such as setting the
+However, as previously mentioned, we will only consider the idealistic situation
+where a congress member can choose their proxy for each topic individually.
+The model obviously allows for votes on topics that are continuous, such as setting the
 budget for the year: instead of simply voting yes or no on some pre-chosen budget,
 the output of the system can serve as the budget.
-Discrete and binary issues can be supported too, though there are multiple ways of
-interpreting the output of the model.
+However, discrete and binary issues can be supported too, and there are multiple
+ways of interpreting the output of the model for such issues.
 For example, one could round the output to the nearest valid choice, such as a 1 or a
 0 for binary issues.
 
@@ -149,6 +149,14 @@ This study employs the use of several common voting mechanisms and adapts them t
 proxy voting system.
 What these mechanisms are and how they operate will be described in the full thesis.
 % in~\autoref{subsec:voting-mechanisms}.  % TODO: Uncomment for thesis
+
+The flexibility of this model in both the discrete and continuous realms, its ability
+to use different voting rules, and its easy interpretability, are the reasons it is
+employed in this study.
+This study will focus primarily on the continuous instead of the discrete output of
+the model, since observing the continuous output allows for more granularity in the
+differences between proxy and non-proxy voting, as well as in the differences between
+voting rules.
 
 This paper will explore how proxy voting affects the vote and under what
 circumstances it can be used by the House without changing the result.
