--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -165,7 +165,7 @@ This study aims to explore the use of proxy voting in the House of Representativ
 We examine how much of an effect in terms of error proxy voting has on the outcome
 of a vote under a number of distributions of opinions, as well as with various
 numbers of inactive agents.
-The error of a proxy vote will be calculated by measuring by how much the system output
+The error of a proxy vote will be calculated by measuring how much the system output
 changes when using proxy voting instead of having all members voting and only present
 members voting.
 This will be done using continuous outputs instead of discrete or binary `yea' or
