--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -102,7 +102,7 @@ opinions are closer to the center.
         \draw[shift={(\x,0)},color=black] (0pt,5pt) -- (0pt,0pt);
         \foreach \x in {0, 5, 10} % Numbers and lower lines
         \draw[shift={(\x,0)},color=black] (0pt,0pt) -- (0pt,-5pt) node[below]{$\x$};
-        
+
         % Labeled points
         \tkzDefPoint((-4/7 + 1) * 5, 0){agentA}
         \tkzDefPoint((3/4 + 1) * 5, 0){agentB}
@@ -110,7 +110,7 @@ opinions are closer to the center.
         \tkzLabelPoint[above](agentA){$\truthof{a}$}
         \tkzLabelPoint[above](agentB){$\truthof{b}$}
         \tkzLabelPoint[above](agentC){$\truthof{c}$}
-        
+
         \foreach \n in {agentA, agentB, agentC}
         \node at (\n)[circle,fill,inner sep=1.75pt]{};
     \end{tikzpicture}
@@ -259,7 +259,8 @@ congress member to remain informed on all topics.
 While the current resolution allows vote by proxy only for emergencies, it is
 possible the resolution could be expanded to exploit this idea.
 
-\vicki{This is a valid reason for proxy voting, but it isn't the reasons we are talking about here.}
+\vicki{This is a valid reason for proxy voting, but it isn't the reasons we are
+talking about here.}
 
 % Explain what Cohensius did
 %   - Strategic participation
@@ -353,7 +354,8 @@ mechanisms minimize this error, is precisely what this paper will explore.
 %   able to apply what's learned here to actual scenarios?
 % \section{Potential Applications}\label{sec:potential-applications}
 % Proxy vote systems can be used in situations where highly accurate measurements are
-% difficult, costly, or time-consuming, and cheaper or easier alternatives are available.
+% difficult, costly, or time-consuming, and cheaper or easier alternatives are
+% available.
 % While this study will show they will not work in all situations, they do have a
 % potential use when one of the alternative measurements tends to yield an asymmetrical
 % distribution of error.
