Added paragraph about why this is interesting

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -17,29 +17,26 @@ letters sent to the Clerk of the House of Representatives~\cite{Clerk.House.gov2
 was put to use as soon as five days later.
 The hope behind the resolution was to allow the House of Representatives
 to vote continue operating while still allowing members to quarantine and
-prevent the spread of COVID-19~\cite{Congress.gov2020}.
+prevent the spread of COVID-19~\cite{Congress.gov2020}, as well as to pave the way for
+future use of proxy voting in other such emergencies.
 However, the question remains as to what degree proxy voting affects the results of
 the vote.
 In this study, we explore the effects of proxy voting on the results of the vote
 under a number of opinion distributions.
 We additionally explore how different voting rules affect the results of the vote.
 
-% TODO: State we assume fairly ideal conditions where an inactive voter can choose
-% their proxy per-topic.
-% TODO: Outline
-% Discuss my assumptions
-%   - Per-topic proxy selection
-%   - Perfect knowledge of potential proxy's positions
-%       - This might need to be discussed after the readers have an understanding of
-%         the model.
-%  - No other factors (e.g. party affiliation)
-% Discuss opinion model (Cohensius)
-% Background
-%   - Proxy voting
-%       - Why it is desirable
-%   - What are voting rules
-% Contribution
+This topic is of large importance because of the potential ramifications of using
+proxy voting directly in the legislative process.
+If proxy voting does not have a large effect on the results of the vote, then it
+can be used to significantly ease the process and lower the risk of participating in
+Congress during pandemics or other emergencies.
+Similarly, if proxy voting can be shown to have a large effect on the results of the
+vote, it would be important to alter the system to mitigate the effects or stop using
+proxy voting in the House altogether.
+In either case, it is important to understand the effects of proxy voting so it can
+be utilized in the most effective way possible.
 
+\section{Assumptions and Preliminaries}\label{sec:assumptions-and-preliminaries}
 In order to conduct this study, we make a number of assumptions.
 First, we assume that each voter is able to choose their proxy per-topic.
 This is not currently the case for the House of Representatives, which requires
