Rewrote about Miller

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -226,18 +226,24 @@ In particular, he introduces the idea we call \textit{expert proxies},
 those being individuals who would `vote as [the inactive voter] would if only
 [the inactive voter] had the time and knowledge to participate
 directly'~\cite{Miller1969}.
-In other words, these are well-studied proxies who are familiar with the topic at hand.
-Additionally, he states, `a representative should be an expert, or at least
+While for the general populace this could be a very useful benefit of proxy voting,
+it is not one that is directly applicable to the House of Representatives.
+One of the reasons individuals are elected to the House of Representatives is to
+research and determine laws that are in the best interest of the people.
+Though the past 25 Congresses have seen anywhere from 10 to over 25 thousand issues
+over 2 years, only around 10\% are actually discussed~\cite{GovTrack2022}.
+That would be approximately 1000 to 2500 issues per Congress, or about 500 to 1250 per
+year.
+While this is still a large number of issues, it is the job of a member of the House
+of Representatives to learn about, research, and deliberate about each issue.
+Additionally, Miller states `a representative should be an expert, or at least
 competent, in each field [on which they are voting]'~\cite{Miller1969}.
-Whereas the past 25 Congresses have seen anywhere from 10 to over 25 thousand issues
-over 2 years (though ultimately only around 10\% are actually
-discussed)~\cite{GovTrack2022}, it would be nearly impossible for any individual
-congress member to remain informed on all topics.
-While the current resolution allows vote by proxy only for emergencies, it is
-possible the resolution could be expanded to exploit this idea.
-
-\vicki{This is a valid reason for proxy voting, but it isn't the reasons we are
-talking about here.}
+This reinforces the idea that a member of the House of Representatives should be, as
+their title would suggest, a representative of the people and have the responsibility
+to become an expert in the issues they are voting on.
+As such, we differ from Miller in the sense that all voters ought to be experts in
+the field, and so we use proxy voting to allow them to be more efficient in their
+duties and avoid spreading disease.
 
 % Explain what Cohensius did
 %   - Strategic participation
