Fixed improper Washington, D.C., format

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -197,7 +197,7 @@ required of them by choosing a proxy to perform the work of voting for them.
 Naturally, this is extremely useful when the cost of voting is high, such as
 when one is ill or fears they may become ill, or when a member's time can be spent
 more efficiently without being physically present for a vote like when attending a
-conference or engaging in active research in some location outside Washington~D.C.
+conference or engaging in active research in some location outside {Washington,~D.C.}
 This is, of course, directly applicable to the House of Representatives, since proxy
 voting would allow them to prevent the spread of disease or avoid whatever other
 emergency triggered the use of proxy voting.
