Dr. Allan's Comments

--- a/abstract.tex
+++ b/abstract.tex
@@ -22,15 +22,17 @@
     However, proxy voting in Congress has been regarded with some skepticism and the
     question remains as to if proxy voting has too great of an effect on the result
     of the vote.
-    In this study, we give proxy voting its best chance and explore its effects on
+    \vicki{Explain what the concern is.  If the proxy is just voting for/against, the concern isn't clear.Is it because the proxy extends to other issues like amendments, etc?}
+    In this study, we give proxy voting its best chance\vicki{explain} 
+    and explore its effects on
     the results of the vote under a number of opinion distributions.
     We additionally explore how different voting rules affect the results of the vote.
     We employ an opinion space model and determine the result of a vote as a point in
     the model space, instead of the vote simply passing or failing, in order to
     increase the granularity of the results and determine how much error is
     introduced due to proxy voting.
-    Finally, we attempt to determine under which circumstances proxy voting should be
-    used, if any, and identify strengths and weaknesses of using proxy voting in the
+    Finally, we attempt to determine under which circumstances, if any, proxy voting should be
+    used and identify strengths and weaknesses of using proxy voting in the
     modern House of Representatives.
     % TODO: Put in a bit of what we discover
 
