Forced all titles to export as their typed case

--- a/references/research.bib
+++ b/references/research.bib
@@ -1,6 +1,6 @@
 @InProceedings{Tyurin2018,
   author          = {Sergey F. Tyurin},
-  title           = {Fault Tolerant Voter},
+  title           = {{Fault Tolerant Voter}},
   year            = {2018},
   address         = {Novosibirsk, Russia},
   pages           = {1--168},
@@ -21,8 +21,8 @@
 
 @InProceedings{Cohensius2017,
   author     = {Cohensius, Gal and Mannor, Shie and Meir, Reshef and Meirom, Eli and Orda, Ariel},
-  booktitle  = {Proceedings of the 16th Conference on Autonomous Agents and MultiAgent Systems},
-  title      = {Proxy Voting for Better Outcomes},
+  booktitle  = {{Proceedings of the 16th Conference on Autonomous Agents and MultiAgent Systems}},
+  title      = {{Proxy Voting for Better Outcomes}},
   year       = {2017},
   address    = {Richland, SC},
   pages      = {858–866},
@@ -40,7 +40,7 @@
 
 @Article{Mueller1972,
   author     = {Dennis C. Mueller and Robert D. Tollison and Thomas D. Willett},
-  title      = {Representative democracy via random selection},
+  title      = {{Representative democracy via random selection}},
   doi        = {10.1007/bf01718470},
   issn       = {1573-7101},
   number     = {1},
@@ -62,8 +62,8 @@ Page 62 might be interesting. It states random democracy might need 1000+ partic
 
 @Conference{Zhang2022,
   author    = {Yuzhe Zhang and Davide Grossi},
-  booktitle = {Proceedings of the 21st International Conference on Autonomous Agents and Multiagent Systems},
-  title     = {Tracking Truth by Weighting Proxies in Liquid Democracy},
+  booktitle = {{Proceedings of the 21st International Conference on Autonomous Agents and Multiagent Systems}},
+  title     = {{Tracking Truth by Weighting Proxies in Liquid Democracy}},
   year      = {2022},
   address   = {Richland, SC},
   month     = {5},
@@ -82,7 +82,7 @@ Page 62 might be interesting. It states random democracy might need 1000+ partic
 
 @Article{Miller1969,
   author     = {Miller, James C.},
-  title      = {A program for direct and proxy voting in the legislative process},
+  title      = {{A program for direct and proxy voting in the legislative process}},
   doi        = {10.1007/BF01718736},
   issn       = {1573-7101},
   number     = {1},
@@ -104,7 +104,7 @@ There is not the first time proxy voting was discussed. There are other articles
 @Article{Golz2021,
   author     = {Paul Gölz and Anson Kahng and Simon Mackenzie and Ariel D. Procaccia},
   journal    = {ACM Trans. Econ. Comput.},
-  title      = {The Fluid Mechanics of Liquid Democracy},
+  title      = {{The Fluid Mechanics of Liquid Democracy}},
   year       = {2021},
   issn       = {2167-8375},
   month      = {oct},
@@ -114,7 +114,7 @@ There is not the first time proxy voting was discussed. There are other articles
   abstract   = {Liquid democracy is the principle of making collective decisions by letting agents transitively delegate their votes. Despite its significant appeal, it has become apparent that a weakness of liquid democracy is that a small subset of agents may gain massive influence. To address this, we propose to change the current practice by allowing agents to specify multiple delegation options instead of just one. Much like in nature, where—fluid mechanics teaches us—liquid maintains an equal level in connected vessels, we seek to control the flow of votes in a way that balances influence as much as possible. Specifically, we analyze the problem of choosing delegations to approximately minimize the maximum number of votes entrusted to any agent by drawing connections to the literature on confluent flow. We also introduce a random graph model for liquid democracy and use it to demonstrate the benefits of our approach both theoretically and empirically.},
   address    = {New York, NY, USA},
   articleno  = {23},
-  booktitle  = {ACM Trans. Econ. Comput.},
+  booktitle  = {{ACM Trans. Econ. Comput.}},
   day        = {15},
   doi        = {10.1145/3485012},
   groups     = {Proxy Voting Examples},
@@ -127,7 +127,7 @@ There is not the first time proxy voting was discussed. There are other articles
 }
 
 @Online{Congress.gov2020,
-  title   = {{H.Res.965} - {Authorizing} remote voting by proxy in the {House of Representatives} and providing for official remote committee proceedings during a public health emergency due to a novel coronavirus, and for other purposes.},
+  title   = {{{H.Res.965} - {Authorizing} remote voting by proxy in the {House of Representatives} and providing for official remote committee proceedings during a public health emergency due to a novel coronavirus, and for other purposes.}},
   url     = {https://www.congress.gov/bill/116th-congress/house-resolution/965},
   urldate = {2022-10-11},
   comment = {Must receive instructions: <https://www.congress.gov/bill/116th-congress/house-resolution/965/text#H18681EA497254CC3911D177F1CEADD8B>
@@ -140,21 +140,21 @@ Must follow instructions exactly: <https://www.congress.gov/bill/116th-congress/
   author = {James Madison},
   month  = sep,
   note   = {Section. 5. states a majority constitutes a quorum, which is required to perform business.},
-  title  = {{The Constitution of the United States}},
+  title  = {{{The Constitution of the United States}}},
   url    = {https://www.archives.gov/founding-docs/constitution-transcript},
   year   = {1787},
 }
 
 @Online{Clerk.House.gov2022,
   date    = {2022-10-13},
-  title   = {Proxy Letters},
+  title   = {{Proxy Letters}},
   url     = {https://clerk.house.gov/ProxyLetter},
   urldate = {2022-10-11},
   year    = {2022},
 }
 
 @Online{GovTrack2022,
-  title   = {Historical Statistics about Legislation in the {U.S. Congress}},
+  title   = {{Historical Statistics about Legislation in the {U.S. Congress}}},
   url     = {https://www.govtrack.us/congress/bills/statistics},
   urldate = {2022-10-13},
   year    = {2022},
@@ -163,8 +163,8 @@ Must follow instructions exactly: <https://www.congress.gov/bill/116th-congress/
 @Article{Kling2015,
   author       = {Kling, Christoph Carl and Kunegis, Jerome and Hartmann, Heinrich and Strohmaier, Markus and Staab, Steffen},
   date         = {2015-03},
-  journaltitle = {ICWSM},
-  title        = {Voting Behaviour and Power in Online Democracy: A Study of Liquid Feedback in Germany's Pirate Party},
+  journaltitle = {{ICWSM}},
+  title        = {{Voting Behaviour and Power in Online Democracy: A Study of Liquid Feedback in Germany's Pirate Party}},
   eid          = {arXiv:1503.07723},
   eprint       = {1503.07723},
   eprintclass  = {cs.CY},
@@ -179,7 +179,7 @@ Must follow instructions exactly: <https://www.congress.gov/bill/116th-congress/
 @Misc{CERP2020,
   author       = {{House Rules Committee}},
   date         = {2020},
-  title        = {Congressional Emergency Remote Proceedings},
+  title        = {{Congressional Emergency Remote Proceedings}},
   location     = {United States of America},
   organization = {United States House of Representatives},
   url          = {https://rules.house.gov/sites/democrats.rules.house.gov/files/CongressionalEmergencyRemoteProceedings.pdf},
