--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -15,10 +15,10 @@ member's vote on their behalf.
 This resolution was passed on May 15th, 2020, and as indicated by proxy designation
 letters sent to the Clerk of the House of Representatives~\cite{Clerk.House.gov2022},
 was put to use as soon as five days later.
-The hope behind the resolution was to allow the House of Representatives
-to vote continue operating\vicki{awk}  while still allowing members to quarantine and
-prevent the spread of COVID-19~\cite{Congress.gov2020}, as well as to pave the way for
-future use of proxy voting in other such emergencies.
+The purpose behind the resolution was to allow the House of Representatives
+to continue operating while still allowing members to quarantine and prevent the
+spread of COVID-19~\cite{Congress.gov2020}, as well as to pave the way for future use
+of proxy voting in other such emergencies.
 However, the question remains as to what degree proxy voting affects the results of
 the vote.
 In this study, we explore the effects of proxy voting on the results of the vote
@@ -67,8 +67,8 @@ later.
 
 Finally, we assume that there are no factors besides closeness in opinion that affect
 the choice of proxy.
-This is differs \vicki{awk} from the actual system presently used, which includes restrictions
-such as a proxy can only serve ten voters \cite{CERP2020}.
+This differs from the actual system presently used, which includes restrictions
+such as a proxy can only serve ten voters~\cite{CERP2020}.
 However, we feel removing restrictions such as these leads to a more interesting
 discussion, since it allows the use of different voting mechanisms and more extreme
 cases.
@@ -205,8 +205,8 @@ voting would allow them to prevent the spread of disease or avoid whatever other
 emergency triggered the use of proxy voting.  \vicki{Does something have to trigger proxy voting, or can it be used for personal reasons?}
 
 In these cases, proxy voting allows voters to skip incurring the costs while
-still having their voice heard by allowing a proxy to perform the work once \vicki{awk} 
-behalf of all voters who transfer their power to that proxy.
+still having their voice heard by allowing a proxy to pay the cost once on behalf of
+all voters who transfer their power to that proxy.
 Of course, a voter would not want to give its voting power to just any proxy.
 This study employs a similar technique as used in~\cite{Cohensius2017}, which has the
 voters, or agents, pass their voting power to the proxy that is closest in the
