--- a/abstract.tex
+++ b/abstract.tex
@@ -16,16 +16,19 @@
     possible, to the result if everyone were to vote.
     This resolution was almost immediately put into practice and remains active at
     the time of this study.
-    While it was designed to reduce the transmission of disease such as COVID-19, if
-    proxy voting can be shown to be beneficial, the resolution could be expanded to
+    The type of proxy voting used in Congress differs from the traditional
+    definition of proxy voting in that proxies are required to vote as directed, and
+    was designed to reduce the transmission of disease such as COVID-19.
+    If proxy voting can be shown to be beneficial, the resolution could be expanded to
     create a more efficient government system.
     However, proxy voting in Congress has been regarded with some skepticism and the
     question remains as to if proxy voting has too great of an effect on the result
     of the vote.
-    \vicki{Explain what the concern is.  If the proxy is just voting for/against, the concern isn't clear.Is it because the proxy extends to other issues like amendments, etc?}
-    In this study, we give proxy voting its best chance\vicki{explain} 
-    and explore its effects on
-    the results of the vote under a number of opinion distributions.
+    As such, there is a need to determine to what degree proxy voting produces
+    error when compared to traditional direct voting, if at all, in order to ensure it
+    cannot be abused and lead to undesirable or unfair results.
+    In this study, we explore the effects of proxy voting on the results of a vote
+    under a number of preference distributions.
     We additionally explore how different voting rules affect the results of the vote.
     We employ an opinion space model and determine the result of a vote as a point in
     the model space, instead of the vote simply passing or failing, in order to
