Fixed Abstract and Public Abstract not appearing since files were moved

--- a/thesis.tex
+++ b/thesis.tex
@@ -135,8 +135,8 @@
     \maketitle
     \makecopyright        % optional
 
-    \include{content/frontmatter/abstract}
-    % \include{content/frontmatter/publicabstract}
+    \include{abstract}
+    % \include{publicabstract}
     % \include{content/frontmatter/dedication}  % optional
 %    \include{acknowl}     % optional TODO: Do I want acknowledgements?
 
