Fixed abstract formatting

--- a/abstract.tex
+++ b/abstract.tex
@@ -34,8 +34,8 @@
     the model space, instead of the vote simply passing or failing, in order to
     increase the granularity of the results and determine how much error is
     introduced due to proxy voting.
-    Finally, we attempt to determine under which circumstances, if any, proxy voting should be
-    used and identify strengths and weaknesses of using proxy voting in the
+    Finally, we attempt to determine under which circumstances, if any, proxy voting
+    should be used and identify strengths and weaknesses of using proxy voting in the
     modern House of Representatives.
     % TODO: Put in a bit of what we discover
 
