Rephrased abstract intro

--- a/abstract.tex
+++ b/abstract.tex
@@ -6,10 +6,10 @@
 % is indented properly. Max 350 words.
 
     % TODO: Rewrite
-    In May 2020, the 116th United States Congress passed a resolution to permit the
+    In early 2020, the United States Congress passed a resolution to permit the
     use of proxy voting during emergencies for members of the House of Representatives.
     Proxy voting is a system of voting where a voter can assign another voter, called
-    a proxy, to vote on their behalf.
+    a proxy or a delegate, to vote on their behalf.
     As with other voting systems, the votes are then aggregated into a final result
     using a voting rule or mechanism.
     Ideally, the result of proxy voting would be the same, or as close to as
